@@ -1,3 +1,8 @@
+2007-04-23  Jeroen Frijters  <jeroen@frijters.net>
+
+	PR classpath/31646:
+	* java/util/Arrays.java (qsort): Corrected initial median calculation.
+
 2007-04-19  Casey Marshall  <csm@gnu.org>
 
 	PR classpath/31626:
